--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -19,8 +19,8 @@
     "test": "yarn test:forge",
     "----- BUILD/DEPLOY -----": "---------------------------",
     "start": "run-p -l hardhat:node deploy:hardhat",
-    "deploy:anvil": "mud types && mud codegen-libdeploy --out src/test && mud deploy --deployerPrivateKey 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80",
-    "deploy:hardhat": "wait-on tcp:8545 && yarn hardhat:resetfee && mud deploy --deployerPrivateKey 0x044C7963E9A89D4F8B64AB23E02E97B2E00DD57FCB60F316AC69B77135003AEF && yarn hardhat:resetfee && yarn types",
+    "deploy:anvil": "mud types && mud codegen-libdeploy --out src/test && mud deploy --deployerPrivateKey 0xdf57089febbacf7ba0bc227dafbffa9fc08a93fdc68e1e42411a14efcf23656e --rpc http://localhost:8545",
+    "deploy:hardhat": "wait-on tcp:8545 && yarn hardhat:resetfee && mud deploy --deployerPrivateKey 0xdf57089febbacf7ba0bc227dafbffa9fc08a93fdc68e1e42411a14efcf23656e && yarn hardhat:resetfee && yarn types",
     "deploy:testnet": "mud deploy-contracts --rpc https://follower.testnet-chain.linfra.xyz --deployerPrivateKey",
     "types": "yarn mud types",
     "anvil:node": "mud devnode",
