--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -33,3 +33,11 @@ jobs:
           FOLDER: packages/client/dist # The directory where your assets are generated
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
           MESSAGE: "client: ({sha}) {msg}" # The commit message
+
+      - name: Deploy to netlify
+        uses: nwtgck/actions-netlify@v2.0
+        with:
+          publish-dir: './packages/client/dist'
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
