--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Build client
         run: yarn workspace client run build
 
-      - name: Push
-        uses: s0/git-publish-subdir-action@develop
-        env:
-          REPO: self
-          BRANCH: dist-client # The branch name where you want to push the assets
-          FOLDER: packages/client/dist # The directory where your assets are generated
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
-          MESSAGE: "client: ({sha}) {msg}" # The commit message
+      # - name: Push
+      #   uses: s0/git-publish-subdir-action@develop
+      #   env:
+      #     REPO: self
+      #     BRANCH: dist-client # The branch name where you want to push the assets
+      #     FOLDER: packages/client/dist # The directory where your assets are generated
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
+      #     MESSAGE: "client: ({sha}) {msg}" # The commit message
 
       - name: Deploy to netlify
         uses: nwtgck/actions-netlify@v2.0
